# JClipper

./: CMakeLists.txt  LICENSE
include/: Application.hpp  DoubleKeysBuffer.hpp  Framerate.hpp  KeysBuffer.hpp
src/: Application.cpp  DoubleKeysBuffer.cpp  Framerate.cpp  KeysBuffer.cpp  Main.cpp
